# boolean-like

./: LICENSE  README.md  annihilator.cabal  boolean-like.cabal
Combinator/: Booly.hs
Control/: Annihilator.hs  BoolLike.hs
proofs/: Booly.thy
