name:                annihilator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Annihilators
homepage:            http://github.com/Shou/annihilator#readme
license:             BSD3
license-file:        LICENSE
author:              Benedict Aas
maintainer:          x@shou.io
copyright:           2016 Benedict Aas
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Control.Annihilator
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Shou/annihilator

